# market-pulse

./: .gitignore  CMakeLists.txt  Dockerfile  HOST_LOCALLY.bat  README.md  TASKS.md
.txt_files/: build_log.txt  knowledge.txt  tasks.txt
docs/: ARCHITECTURE.md  BUILD_LOG.md  CONNECTION_LEAK_FIX.md  DEPLOYMENT_GUIDE.md  DOCKER_CMAKE_ISSUES.md  KNOWLEDGE.md  RENDER_WEBSOCKET_TIMEOUT.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: test.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CandlestickChart.tsx  ControlPanel.tsx  EducationalTooltip.tsx  Header.tsx  LandingPage.tsx  OrderBook.tsx  PriceChart.tsx  StatsPanel.tsx  TradeTicker.tsx
frontend/src/context/: EducationalModeContext.tsx
frontend/src/hooks/: useMockData.ts  useWebSocket.ts
frontend/src/pages/: LandingPage.tsx  VisualizerPage.tsx
include/: CandleManager.h  Common.h  MarketSentiment.h  MatchingEngine.h  NewsShock.h  Order.h  OrderBook.h  OrderQueue.h  PriceEngine.h  SessionState.h  Visualizer.h  WebSocketServer.h
src/: MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderQueue.cpp  Visualizer.cpp  WebSocketServer.cpp  main.cpp
tests/: CMakeLists.txt  test_matching_engine.cpp  test_order.cpp  test_order_queue.cpp  test_orderbook.cpp
